--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "dependencies": {
         "chalk": "^5.6.2",
         "hono": "^4.9.9",
+        "read": "^5.0.1",
         "zod": "^4.1.12"
     },
     "devDependencies": {
